[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wartegonline-mcp"
version = "0.1.0"
description = "MCP server for Warteg Online meal delivery management"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "mcp[cli]>=1.25.0",
    "requests>=2.32.5",
    "uvicorn>=0.30.0",
    "starlette>=0.38.0",
    "smithery>=0.4.2",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"
warlon-mcp = "warlon_mcp:main"

[tool.smithery]
server = "warlon_mcp:create_server"

[tool.setuptools]
py-modules = ["warlon_mcp", "warlon_client"]
